# ts-indexer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DATABASE_USAGE.md  INDEXER.md  PERFORMANCE.md  README.md  SUGGESTIONS_STORAGE.md  alibaba_cluster_trace_2018_metadata.yaml  analyze_datasets.py  australian_electricity_demand_metadata.yaml  check_interactive_logs.sh  main.py  migrate_to_motherduck.py  modal_indexer.py  pyproject.toml  test_catalog.db  ts_indexer.db  ts_indexer.db.wal
.claude/agents/: chief-pragmatist.md
src/: main.rs
src/cli/: commands.rs  interactive.rs  mod.rs
src/db/: mod.rs  motherduck.rs
src/indexer/: mod.rs
src/monitoring/: mod.rs
src/plotting/: mod.rs
src/progress/: mod.rs
src/s3/: mod.rs
src/search/: mod.rs
